test/spec_vectors/return_call/fail/module_3.wat
(module (func $arity-0-vs-1 (return_call 1)) (func (param i32)))